// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookCitation renders  component with a mock espace record 1`] = `
<BookCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [
        Object {
          "rek_author": "Teesson, Maree",
          "rek_author_id": null,
          "rek_author_order": 1,
          "rek_author_pid": "UQ:295866",
        },
        Object {
          "rek_author": "Hall, Wayne",
          "rek_author_id": null,
          "rek_author_order": 2,
          "rek_author_pid": "UQ:295866",
        },
        Object {
          "rek_author": "Proudfoot, Heather",
          "rek_author_id": null,
          "rek_author_order": 3,
          "rek_author_pid": "UQ:295866",
        },
        Object {
          "rek_author": "Degenhardt, Louisa",
          "rek_author_id": null,
          "rek_author_order": 4,
          "rek_author_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": null,
          "rek_author_id_order": 1,
          "rek_author_id_pid": "UQ:295866",
        },
        Object {
          "rek_author_id": 1968,
          "rek_author_id_id": null,
          "rek_author_id_order": 2,
          "rek_author_id_pid": "UQ:295866",
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": null,
          "rek_author_id_order": 3,
          "rek_author_id_pid": "UQ:295866",
        },
        Object {
          "rek_author_id": 0,
          "rek_author_id_id": null,
          "rek_author_id_order": 4,
          "rek_author_id_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Smith, A",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
        },
        Object {
          "rek_contributor": "Smith, B",
          "rek_contributor_id": null,
          "rek_contributor_order": 3,
        },
        Object {
          "rek_contributor": "Smith, C",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
        },
      ],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": null,
      "fez_record_search_key_edition": Object {
        "rek_edition": "2nd",
        "rek_edition_id": null,
        "rek_edition_pid": "UQ:295866",
      },
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_fields_of_research": Array [],
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9780415583008",
          "rek_isbn_id": null,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:295866",
        },
        Object {
          "rek_isbn": "9780415582995",
          "rek_isbn_id": null,
          "rek_isbn_order": 2,
          "rek_isbn_pid": "UQ:295866",
        },
        Object {
          "rek_isbn": "0415583004",
          "rek_isbn_id": null,
          "rek_isbn_order": 3,
          "rek_isbn_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:171723",
          "rek_ismemberof_id": null,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Hove, United Kingdom",
        "rek_place_of_publication_id": null,
        "rek_place_of_publication_pid": "UQ:295866",
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "Psychology Press",
        "rek_publisher_id": null,
        "rek_publisher_pid": "UQ:295866",
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": 453638,
        "rek_refereed_source_id": null,
        "rek_refereed_source_pid": "UQ:295866",
      },
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": Object {
        "rek_series": "Clinical Psychology: A Modular Course",
        "rek_series_id": null,
        "rek_series_pid": "UQ:295866",
      },
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "158",
        "rek_total_pages_id": null,
        "rek_total_pages_pid": "UQ:295866",
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_score": null,
      "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Teesson, Maree\\" href=\\"/list/author/Teesson%2C+Maree/\\">Teesson, Maree</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Hall, Wayne\\" href=\\"/list/author_id/1968/\\">Hall, Wayne</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Proudfoot, Heather\\" href=\\"/list/author/Proudfoot%2C+Heather/\\">Proudfoot, Heather</a> and <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Degenhardt, Louisa\\" href=\\"/list/author/Degenhardt%2C+Louisa/\\">Degenhardt, Louisa</a> <i><a class=\\"citation_title\\" title=\\"Click to view Book: Addictions\\" href=\\"/view/UQ:295866\\">Addictions</a></i> <span class=\\"citation_edition\\">2nd</span> ed.   <span class=\\"citation_place_of_publication\\">Hove, United Kingdom</span>: <span class=\\"citation_publisher\\">Psychology Press</span>, <span class=\\"citation_date\\">2011</span>.",
      "rek_copyright": "on",
      "rek_created_date": "2013-04-04T15:08:58Z",
      "rek_date": "2011-01-01T00:00:00Z",
      "rek_depositor": null,
      "rek_depositor_affiliation": 1061,
      "rek_description": null,
      "rek_display_type": 174,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_title": null,
      "rek_genre": "Book",
      "rek_genre_type": null,
      "rek_herdc_notes": null,
      "rek_object_type": 3,
      "rek_pid": "UQ:295866",
      "rek_pubmed_doc_type": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_security_inherited": null,
      "rek_status": 2,
      "rek_subtype": null,
      "rek_thomson_citation_count": null,
      "rek_title": "Addictions",
      "rek_updated_date": "2014-10-04T14:05:34Z",
      "rek_wok_doc_type": null,
    }
  }
>
  <div
    className="citationContent citationBook"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [
            Object {
              "rek_author": "Teesson, Maree",
              "rek_author_id": null,
              "rek_author_order": 1,
              "rek_author_pid": "UQ:295866",
            },
            Object {
              "rek_author": "Hall, Wayne",
              "rek_author_id": null,
              "rek_author_order": 2,
              "rek_author_pid": "UQ:295866",
            },
            Object {
              "rek_author": "Proudfoot, Heather",
              "rek_author_id": null,
              "rek_author_order": 3,
              "rek_author_pid": "UQ:295866",
            },
            Object {
              "rek_author": "Degenhardt, Louisa",
              "rek_author_id": null,
              "rek_author_order": 4,
              "rek_author_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": null,
              "rek_author_id_order": 1,
              "rek_author_id_pid": "UQ:295866",
            },
            Object {
              "rek_author_id": 1968,
              "rek_author_id_id": null,
              "rek_author_id_order": 2,
              "rek_author_id_pid": "UQ:295866",
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": null,
              "rek_author_id_order": 3,
              "rek_author_id_pid": "UQ:295866",
            },
            Object {
              "rek_author_id": 0,
              "rek_author_id_id": null,
              "rek_author_id_order": 4,
              "rek_author_id_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [
            Object {
              "rek_contributor": "Smith, A",
              "rek_contributor_id": null,
              "rek_contributor_order": 1,
            },
            Object {
              "rek_contributor": "Smith, B",
              "rek_contributor_id": null,
              "rek_contributor_order": 3,
            },
            Object {
              "rek_contributor": "Smith, C",
              "rek_contributor_id": null,
              "rek_contributor_order": 2,
            },
          ],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": null,
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": null,
          "fez_record_search_key_edition": Object {
            "rek_edition": "2nd",
            "rek_edition_id": null,
            "rek_edition_pid": "UQ:295866",
          },
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_fields_of_research": Array [],
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [
            Object {
              "rek_isbn": "9780415583008",
              "rek_isbn_id": null,
              "rek_isbn_order": 1,
              "rek_isbn_pid": "UQ:295866",
            },
            Object {
              "rek_isbn": "9780415582995",
              "rek_isbn_id": null,
              "rek_isbn_order": 2,
              "rek_isbn_pid": "UQ:295866",
            },
            Object {
              "rek_isbn": "0415583004",
              "rek_isbn_id": null,
              "rek_isbn_order": 3,
              "rek_isbn_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:171723",
              "rek_ismemberof_id": null,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": null,
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Hove, United Kingdom",
            "rek_place_of_publication_id": null,
            "rek_place_of_publication_pid": "UQ:295866",
          },
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "Psychology Press",
            "rek_publisher_id": null,
            "rek_publisher_pid": "UQ:295866",
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": 453638,
            "rek_refereed_source_id": null,
            "rek_refereed_source_pid": "UQ:295866",
          },
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": Object {
            "rek_series": "Clinical Psychology: A Modular Course",
            "rek_series_id": null,
            "rek_series_pid": "UQ:295866",
          },
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "158",
            "rek_total_pages_id": null,
            "rek_total_pages_pid": "UQ:295866",
          },
          "fez_record_search_key_transcript": null,
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_score": null,
          "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Teesson, Maree\\" href=\\"/list/author/Teesson%2C+Maree/\\">Teesson, Maree</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Hall, Wayne\\" href=\\"/list/author_id/1968/\\">Hall, Wayne</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Proudfoot, Heather\\" href=\\"/list/author/Proudfoot%2C+Heather/\\">Proudfoot, Heather</a> and <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Degenhardt, Louisa\\" href=\\"/list/author/Degenhardt%2C+Louisa/\\">Degenhardt, Louisa</a> <i><a class=\\"citation_title\\" title=\\"Click to view Book: Addictions\\" href=\\"/view/UQ:295866\\">Addictions</a></i> <span class=\\"citation_edition\\">2nd</span> ed.   <span class=\\"citation_place_of_publication\\">Hove, United Kingdom</span>: <span class=\\"citation_publisher\\">Psychology Press</span>, <span class=\\"citation_date\\">2011</span>.",
          "rek_copyright": "on",
          "rek_created_date": "2013-04-04T15:08:58Z",
          "rek_date": "2011-01-01T00:00:00Z",
          "rek_depositor": null,
          "rek_depositor_affiliation": 1061,
          "rek_description": null,
          "rek_display_type": 174,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_title": null,
          "rek_genre": "Book",
          "rek_genre_type": null,
          "rek_herdc_notes": null,
          "rek_object_type": 3,
          "rek_pid": "UQ:295866",
          "rek_pubmed_doc_type": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_security_inherited": null,
          "rek_status": 2,
          "rek_subtype": null,
          "rek_thomson_citation_count": null,
          "rek_title": "Addictions",
          "rek_updated_date": "2014-10-04T14:05:34Z",
          "rek_wok_doc_type": null,
        }
      }
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
    >
      <span
        className="citationAuthors"
      >
        <CitationView
          className="citationAuthor"
          prefix=""
          suffix=""
          value="Teesson, Maree"
        >
          <span
            className="citationAuthor"
          >
            Teesson, Maree
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          prefix=", "
          suffix=""
          value="Hall, Wayne"
        >
          <span
            className="citationAuthor"
          >
            , 
            Hall, Wayne
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          prefix=", "
          suffix=""
          value="Proudfoot, Heather"
        >
          <span
            className="citationAuthor"
          >
            , 
            Proudfoot, Heather
          </span>
        </CitationView>
        <CitationView
          className="citationAuthor"
          prefix=" and "
          suffix=" "
          value="Degenhardt, Louisa"
        >
          <span
            className="citationAuthor"
          >
             and 
            Degenhardt, Louisa
             
          </span>
        </CitationView>
      </span>
    </AuthorsCitationView>
    <YearCitationView
      date="2011-01-01T00:00:00Z"
    >
      <span
        className="citationYear"
      >
        (
        2011
        ).
      </span>
    </YearCitationView>
    <CitationView
      className="citationTitle"
      value="Addictions"
    >
      <span
        className="citationTitle"
      >
         
        Addictions
        .
      </span>
    </CitationView>
    <CitationView
      className="citationEdition"
      suffix=" ed."
      value="2nd"
    >
      <span
        className="citationEdition"
      >
         
        2nd
         ed.
      </span>
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      suffix=":"
      value="Hove, United Kingdom"
    >
      <span
        className="citationPlaceOfPublication"
      >
         
        Hove, United Kingdom
        :
      </span>
    </CitationView>
    <CitationView
      className="citationPublisher"
      value="Psychology Press"
    >
      <span
        className="citationPublisher"
      >
         
        Psychology Press
        .
      </span>
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</BookCitation>
`;

exports[`BookCitation renders  component with empty publication 1`] = `
<BookCitation
  publication={Object {}}
>
  <div
    className="citationContent citationBook"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <AuthorsCitationView
      className="citationAuthors"
      publication={Object {}}
      searchKey={
        Object {
          "key": "fez_record_search_key_author",
          "order": "rek_author_order",
          "subkey": "rek_author",
        }
      }
    >
      <span
        className="citationAuthors empty"
      />
    </AuthorsCitationView>
    <YearCitationView>
      <span
        className="citationYear empty"
      />
    </YearCitationView>
    <CitationView
      className="citationTitle"
    >
      <span
        className="citationTitle empty"
      />
    </CitationView>
    <CitationView
      className="citationEdition"
      suffix=" ed."
      value={null}
    >
      <span
        className="citationEdition empty"
      />
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      suffix=":"
      value={null}
    >
      <span
        className="citationPlaceOfPublication empty"
      />
    </CitationView>
    <CitationView
      className="citationPublisher"
      value={null}
    >
      <span
        className="citationPublisher empty"
      />
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</BookCitation>
`;

exports[`BookCitation renders  should render citation for edited book record 1`] = `
<BookCitation
  publication={
    Object {
      "fez_record_search_key_access_conditions": null,
      "fez_record_search_key_acknowledgements": null,
      "fez_record_search_key_additional_notes": null,
      "fez_record_search_key_advisory_statement": null,
      "fez_record_search_key_alternate_genre": Array [],
      "fez_record_search_key_alternative_title": Array [],
      "fez_record_search_key_ands_collection_type": null,
      "fez_record_search_key_architectural_features": Array [],
      "fez_record_search_key_article_number": null,
      "fez_record_search_key_assigned_group_id": Array [],
      "fez_record_search_key_assigned_user_id": Array [],
      "fez_record_search_key_author": Array [],
      "fez_record_search_key_author_affiliation_country": Array [],
      "fez_record_search_key_author_affiliation_full_address": Array [],
      "fez_record_search_key_author_affiliation_id": Array [],
      "fez_record_search_key_author_affiliation_name": Array [],
      "fez_record_search_key_author_id": Array [],
      "fez_record_search_key_author_role": Array [],
      "fez_record_search_key_book_title": null,
      "fez_record_search_key_building_materials": Array [],
      "fez_record_search_key_category": Array [],
      "fez_record_search_key_chapter_number": null,
      "fez_record_search_key_condition": Array [],
      "fez_record_search_key_conference_dates": null,
      "fez_record_search_key_conference_id": null,
      "fez_record_search_key_conference_location": null,
      "fez_record_search_key_conference_name": null,
      "fez_record_search_key_construction_date": null,
      "fez_record_search_key_contact_details_email": Array [],
      "fez_record_search_key_contributor": Array [
        Object {
          "rek_contributor": "Smith, A",
          "rek_contributor_id": null,
          "rek_contributor_order": 1,
        },
        Object {
          "rek_contributor": "Smith, C",
          "rek_contributor_id": null,
          "rek_contributor_order": 2,
        },
        Object {
          "rek_contributor": "Smith, B",
          "rek_contributor_id": null,
          "rek_contributor_order": 3,
        },
      ],
      "fez_record_search_key_contributor_id": Array [],
      "fez_record_search_key_convener": null,
      "fez_record_search_key_corresponding_country": Array [],
      "fez_record_search_key_corresponding_email": Array [],
      "fez_record_search_key_corresponding_name": Array [],
      "fez_record_search_key_corresponding_organisation": Array [],
      "fez_record_search_key_country_of_issue": null,
      "fez_record_search_key_coverage_period": Array [],
      "fez_record_search_key_creator_id": Array [],
      "fez_record_search_key_creator_name": Array [],
      "fez_record_search_key_data_volume": null,
      "fez_record_search_key_datastream_policy": null,
      "fez_record_search_key_date_available": null,
      "fez_record_search_key_date_photo_taken": null,
      "fez_record_search_key_date_recorded": null,
      "fez_record_search_key_date_scanned": null,
      "fez_record_search_key_doi": null,
      "fez_record_search_key_edition": Object {
        "rek_edition": "2nd",
        "rek_edition_id": null,
        "rek_edition_pid": "UQ:295866",
      },
      "fez_record_search_key_end_date": null,
      "fez_record_search_key_end_page": null,
      "fez_record_search_key_fields_of_research": Array [],
      "fez_record_search_key_file_attachment_access_condition": Array [],
      "fez_record_search_key_file_attachment_embargo_date": Array [],
      "fez_record_search_key_file_attachment_name": Array [],
      "fez_record_search_key_geographic_area": Array [],
      "fez_record_search_key_grant_acronym": Array [],
      "fez_record_search_key_grant_agency": Array [],
      "fez_record_search_key_grant_agency_id": Array [],
      "fez_record_search_key_grant_id": Array [],
      "fez_record_search_key_grant_text": Array [],
      "fez_record_search_key_herdc_code": null,
      "fez_record_search_key_herdc_status": null,
      "fez_record_search_key_identifier": Array [],
      "fez_record_search_key_institutional_status": null,
      "fez_record_search_key_interior_features": Array [],
      "fez_record_search_key_isbn": Array [
        Object {
          "rek_isbn": "9780415583008",
          "rek_isbn_id": null,
          "rek_isbn_order": 1,
          "rek_isbn_pid": "UQ:295866",
        },
        Object {
          "rek_isbn": "9780415582995",
          "rek_isbn_id": null,
          "rek_isbn_order": 2,
          "rek_isbn_pid": "UQ:295866",
        },
        Object {
          "rek_isbn": "0415583004",
          "rek_isbn_id": null,
          "rek_isbn_order": 3,
          "rek_isbn_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_isdatasetof": Array [],
      "fez_record_search_key_isderivationof": Array [],
      "fez_record_search_key_isi_loc": null,
      "fez_record_search_key_ismemberof": Array [
        Object {
          "rek_ismemberof": "UQ:171723",
          "rek_ismemberof_id": null,
          "rek_ismemberof_order": 1,
          "rek_ismemberof_pid": "UQ:295866",
        },
      ],
      "fez_record_search_key_issn": Array [],
      "fez_record_search_key_issue_number": null,
      "fez_record_search_key_job_number": null,
      "fez_record_search_key_journal_name": null,
      "fez_record_search_key_keywords": Array [],
      "fez_record_search_key_language": Array [],
      "fez_record_search_key_language_of_book_title": Array [],
      "fez_record_search_key_language_of_journal_name": Array [],
      "fez_record_search_key_language_of_proceedings_title": Array [],
      "fez_record_search_key_language_of_title": Array [],
      "fez_record_search_key_length": null,
      "fez_record_search_key_license": null,
      "fez_record_search_key_link": Array [],
      "fez_record_search_key_link_description": Array [],
      "fez_record_search_key_location": Array [],
      "fez_record_search_key_native_script_book_title": null,
      "fez_record_search_key_native_script_conference_name": null,
      "fez_record_search_key_native_script_journal_name": null,
      "fez_record_search_key_native_script_proceedings_title": null,
      "fez_record_search_key_native_script_title": null,
      "fez_record_search_key_newspaper": null,
      "fez_record_search_key_notes": null,
      "fez_record_search_key_oa_embargo_days": null,
      "fez_record_search_key_oa_notes": null,
      "fez_record_search_key_oa_status": null,
      "fez_record_search_key_org_name": null,
      "fez_record_search_key_org_unit_name": null,
      "fez_record_search_key_original_format": null,
      "fez_record_search_key_parent_publication": null,
      "fez_record_search_key_patent_number": null,
      "fez_record_search_key_period": Array [],
      "fez_record_search_key_place_of_publication": Object {
        "rek_place_of_publication": "Hove, United Kingdom",
        "rek_place_of_publication_id": null,
        "rek_place_of_publication_pid": "UQ:295866",
      },
      "fez_record_search_key_proceedings_title": null,
      "fez_record_search_key_project_description": null,
      "fez_record_search_key_project_id": null,
      "fez_record_search_key_project_name": null,
      "fez_record_search_key_project_start_date": null,
      "fez_record_search_key_publisher": Object {
        "rek_publisher": "Psychology Press",
        "rek_publisher_id": null,
        "rek_publisher_pid": "UQ:295866",
      },
      "fez_record_search_key_pubmed_id": null,
      "fez_record_search_key_refereed": null,
      "fez_record_search_key_refereed_source": Object {
        "rek_refereed_source": 453638,
        "rek_refereed_source_id": null,
        "rek_refereed_source_pid": "UQ:295866",
      },
      "fez_record_search_key_related_datasets": null,
      "fez_record_search_key_related_publications": null,
      "fez_record_search_key_report_number": null,
      "fez_record_search_key_retracted": null,
      "fez_record_search_key_rights": null,
      "fez_record_search_key_roman_script_book_title": null,
      "fez_record_search_key_roman_script_conference_name": null,
      "fez_record_search_key_roman_script_journal_name": null,
      "fez_record_search_key_roman_script_proceedings_title": null,
      "fez_record_search_key_roman_script_title": null,
      "fez_record_search_key_scale": null,
      "fez_record_search_key_scopus_id": null,
      "fez_record_search_key_section": null,
      "fez_record_search_key_seo_code": Array [],
      "fez_record_search_key_series": Object {
        "rek_series": "Clinical Psychology: A Modular Course",
        "rek_series_id": null,
        "rek_series_pid": "UQ:295866",
      },
      "fez_record_search_key_software_required": Array [],
      "fez_record_search_key_source": null,
      "fez_record_search_key_start_date": null,
      "fez_record_search_key_start_page": null,
      "fez_record_search_key_structural_systems": Array [],
      "fez_record_search_key_style": Array [],
      "fez_record_search_key_subcategory": Array [],
      "fez_record_search_key_subject": Array [],
      "fez_record_search_key_supervisor": Array [],
      "fez_record_search_key_supervisor_id": Array [],
      "fez_record_search_key_surrounding_features": Array [],
      "fez_record_search_key_time_period_end_date": null,
      "fez_record_search_key_time_period_start_date": null,
      "fez_record_search_key_total_chapters": null,
      "fez_record_search_key_total_pages": Object {
        "rek_total_pages": "158",
        "rek_total_pages_id": null,
        "rek_total_pages_pid": "UQ:295866",
      },
      "fez_record_search_key_transcript": null,
      "fez_record_search_key_translated_book_title": null,
      "fez_record_search_key_translated_conference_name": null,
      "fez_record_search_key_translated_journal_name": null,
      "fez_record_search_key_translated_newspaper": null,
      "fez_record_search_key_translated_proceedings_title": null,
      "fez_record_search_key_translated_title": null,
      "fez_record_search_key_type_of_data": Array [],
      "fez_record_search_key_volume_number": null,
      "rek_altmetric_id": null,
      "rek_altmetric_score": null,
      "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Teesson, Maree\\" href=\\"/list/author/Teesson%2C+Maree/\\">Teesson, Maree</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Hall, Wayne\\" href=\\"/list/author_id/1968/\\">Hall, Wayne</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Proudfoot, Heather\\" href=\\"/list/author/Proudfoot%2C+Heather/\\">Proudfoot, Heather</a> and <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Degenhardt, Louisa\\" href=\\"/list/author/Degenhardt%2C+Louisa/\\">Degenhardt, Louisa</a> <i><a class=\\"citation_title\\" title=\\"Click to view Book: Addictions\\" href=\\"/view/UQ:295866\\">Addictions</a></i> <span class=\\"citation_edition\\">2nd</span> ed.   <span class=\\"citation_place_of_publication\\">Hove, United Kingdom</span>: <span class=\\"citation_publisher\\">Psychology Press</span>, <span class=\\"citation_date\\">2011</span>.",
      "rek_copyright": "on",
      "rek_created_date": "2013-04-04T15:08:58Z",
      "rek_date": "2011-01-01T00:00:00Z",
      "rek_depositor": null,
      "rek_depositor_affiliation": 1061,
      "rek_description": null,
      "rek_display_type": 174,
      "rek_file_downloads": 0,
      "rek_formatted_abstract": null,
      "rek_formatted_title": null,
      "rek_genre": "Book",
      "rek_genre_type": null,
      "rek_herdc_notes": null,
      "rek_object_type": 3,
      "rek_pid": "UQ:295866",
      "rek_pubmed_doc_type": null,
      "rek_scopus_citation_count": null,
      "rek_scopus_doc_type": null,
      "rek_security_inherited": null,
      "rek_status": 2,
      "rek_subtype": "Edited Book",
      "rek_thomson_citation_count": null,
      "rek_title": "Addictions",
      "rek_updated_date": "2014-10-04T14:05:34Z",
      "rek_wok_doc_type": null,
    }
  }
>
  <div
    className="citationContent citationBook"
  >
    <FontIcon
      className="material-icons citationIcon"
      data-place="left"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="material-icons citationIcon"
        data-place="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        format_quote
      </span>
    </FontIcon>
    <EditorsCitationView
      prefix=""
      publication={
        Object {
          "fez_record_search_key_access_conditions": null,
          "fez_record_search_key_acknowledgements": null,
          "fez_record_search_key_additional_notes": null,
          "fez_record_search_key_advisory_statement": null,
          "fez_record_search_key_alternate_genre": Array [],
          "fez_record_search_key_alternative_title": Array [],
          "fez_record_search_key_ands_collection_type": null,
          "fez_record_search_key_architectural_features": Array [],
          "fez_record_search_key_article_number": null,
          "fez_record_search_key_assigned_group_id": Array [],
          "fez_record_search_key_assigned_user_id": Array [],
          "fez_record_search_key_author": Array [],
          "fez_record_search_key_author_affiliation_country": Array [],
          "fez_record_search_key_author_affiliation_full_address": Array [],
          "fez_record_search_key_author_affiliation_id": Array [],
          "fez_record_search_key_author_affiliation_name": Array [],
          "fez_record_search_key_author_id": Array [],
          "fez_record_search_key_author_role": Array [],
          "fez_record_search_key_book_title": null,
          "fez_record_search_key_building_materials": Array [],
          "fez_record_search_key_category": Array [],
          "fez_record_search_key_chapter_number": null,
          "fez_record_search_key_condition": Array [],
          "fez_record_search_key_conference_dates": null,
          "fez_record_search_key_conference_id": null,
          "fez_record_search_key_conference_location": null,
          "fez_record_search_key_conference_name": null,
          "fez_record_search_key_construction_date": null,
          "fez_record_search_key_contact_details_email": Array [],
          "fez_record_search_key_contributor": Array [
            Object {
              "rek_contributor": "Smith, A",
              "rek_contributor_id": null,
              "rek_contributor_order": 1,
            },
            Object {
              "rek_contributor": "Smith, C",
              "rek_contributor_id": null,
              "rek_contributor_order": 2,
            },
            Object {
              "rek_contributor": "Smith, B",
              "rek_contributor_id": null,
              "rek_contributor_order": 3,
            },
          ],
          "fez_record_search_key_contributor_id": Array [],
          "fez_record_search_key_convener": null,
          "fez_record_search_key_corresponding_country": Array [],
          "fez_record_search_key_corresponding_email": Array [],
          "fez_record_search_key_corresponding_name": Array [],
          "fez_record_search_key_corresponding_organisation": Array [],
          "fez_record_search_key_country_of_issue": null,
          "fez_record_search_key_coverage_period": Array [],
          "fez_record_search_key_creator_id": Array [],
          "fez_record_search_key_creator_name": Array [],
          "fez_record_search_key_data_volume": null,
          "fez_record_search_key_datastream_policy": null,
          "fez_record_search_key_date_available": null,
          "fez_record_search_key_date_photo_taken": null,
          "fez_record_search_key_date_recorded": null,
          "fez_record_search_key_date_scanned": null,
          "fez_record_search_key_doi": null,
          "fez_record_search_key_edition": Object {
            "rek_edition": "2nd",
            "rek_edition_id": null,
            "rek_edition_pid": "UQ:295866",
          },
          "fez_record_search_key_end_date": null,
          "fez_record_search_key_end_page": null,
          "fez_record_search_key_fields_of_research": Array [],
          "fez_record_search_key_file_attachment_access_condition": Array [],
          "fez_record_search_key_file_attachment_embargo_date": Array [],
          "fez_record_search_key_file_attachment_name": Array [],
          "fez_record_search_key_geographic_area": Array [],
          "fez_record_search_key_grant_acronym": Array [],
          "fez_record_search_key_grant_agency": Array [],
          "fez_record_search_key_grant_agency_id": Array [],
          "fez_record_search_key_grant_id": Array [],
          "fez_record_search_key_grant_text": Array [],
          "fez_record_search_key_herdc_code": null,
          "fez_record_search_key_herdc_status": null,
          "fez_record_search_key_identifier": Array [],
          "fez_record_search_key_institutional_status": null,
          "fez_record_search_key_interior_features": Array [],
          "fez_record_search_key_isbn": Array [
            Object {
              "rek_isbn": "9780415583008",
              "rek_isbn_id": null,
              "rek_isbn_order": 1,
              "rek_isbn_pid": "UQ:295866",
            },
            Object {
              "rek_isbn": "9780415582995",
              "rek_isbn_id": null,
              "rek_isbn_order": 2,
              "rek_isbn_pid": "UQ:295866",
            },
            Object {
              "rek_isbn": "0415583004",
              "rek_isbn_id": null,
              "rek_isbn_order": 3,
              "rek_isbn_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_isdatasetof": Array [],
          "fez_record_search_key_isderivationof": Array [],
          "fez_record_search_key_isi_loc": null,
          "fez_record_search_key_ismemberof": Array [
            Object {
              "rek_ismemberof": "UQ:171723",
              "rek_ismemberof_id": null,
              "rek_ismemberof_order": 1,
              "rek_ismemberof_pid": "UQ:295866",
            },
          ],
          "fez_record_search_key_issn": Array [],
          "fez_record_search_key_issue_number": null,
          "fez_record_search_key_job_number": null,
          "fez_record_search_key_journal_name": null,
          "fez_record_search_key_keywords": Array [],
          "fez_record_search_key_language": Array [],
          "fez_record_search_key_language_of_book_title": Array [],
          "fez_record_search_key_language_of_journal_name": Array [],
          "fez_record_search_key_language_of_proceedings_title": Array [],
          "fez_record_search_key_language_of_title": Array [],
          "fez_record_search_key_length": null,
          "fez_record_search_key_license": null,
          "fez_record_search_key_link": Array [],
          "fez_record_search_key_link_description": Array [],
          "fez_record_search_key_location": Array [],
          "fez_record_search_key_native_script_book_title": null,
          "fez_record_search_key_native_script_conference_name": null,
          "fez_record_search_key_native_script_journal_name": null,
          "fez_record_search_key_native_script_proceedings_title": null,
          "fez_record_search_key_native_script_title": null,
          "fez_record_search_key_newspaper": null,
          "fez_record_search_key_notes": null,
          "fez_record_search_key_oa_embargo_days": null,
          "fez_record_search_key_oa_notes": null,
          "fez_record_search_key_oa_status": null,
          "fez_record_search_key_org_name": null,
          "fez_record_search_key_org_unit_name": null,
          "fez_record_search_key_original_format": null,
          "fez_record_search_key_parent_publication": null,
          "fez_record_search_key_patent_number": null,
          "fez_record_search_key_period": Array [],
          "fez_record_search_key_place_of_publication": Object {
            "rek_place_of_publication": "Hove, United Kingdom",
            "rek_place_of_publication_id": null,
            "rek_place_of_publication_pid": "UQ:295866",
          },
          "fez_record_search_key_proceedings_title": null,
          "fez_record_search_key_project_description": null,
          "fez_record_search_key_project_id": null,
          "fez_record_search_key_project_name": null,
          "fez_record_search_key_project_start_date": null,
          "fez_record_search_key_publisher": Object {
            "rek_publisher": "Psychology Press",
            "rek_publisher_id": null,
            "rek_publisher_pid": "UQ:295866",
          },
          "fez_record_search_key_pubmed_id": null,
          "fez_record_search_key_refereed": null,
          "fez_record_search_key_refereed_source": Object {
            "rek_refereed_source": 453638,
            "rek_refereed_source_id": null,
            "rek_refereed_source_pid": "UQ:295866",
          },
          "fez_record_search_key_related_datasets": null,
          "fez_record_search_key_related_publications": null,
          "fez_record_search_key_report_number": null,
          "fez_record_search_key_retracted": null,
          "fez_record_search_key_rights": null,
          "fez_record_search_key_roman_script_book_title": null,
          "fez_record_search_key_roman_script_conference_name": null,
          "fez_record_search_key_roman_script_journal_name": null,
          "fez_record_search_key_roman_script_proceedings_title": null,
          "fez_record_search_key_roman_script_title": null,
          "fez_record_search_key_scale": null,
          "fez_record_search_key_scopus_id": null,
          "fez_record_search_key_section": null,
          "fez_record_search_key_seo_code": Array [],
          "fez_record_search_key_series": Object {
            "rek_series": "Clinical Psychology: A Modular Course",
            "rek_series_id": null,
            "rek_series_pid": "UQ:295866",
          },
          "fez_record_search_key_software_required": Array [],
          "fez_record_search_key_source": null,
          "fez_record_search_key_start_date": null,
          "fez_record_search_key_start_page": null,
          "fez_record_search_key_structural_systems": Array [],
          "fez_record_search_key_style": Array [],
          "fez_record_search_key_subcategory": Array [],
          "fez_record_search_key_subject": Array [],
          "fez_record_search_key_supervisor": Array [],
          "fez_record_search_key_supervisor_id": Array [],
          "fez_record_search_key_surrounding_features": Array [],
          "fez_record_search_key_time_period_end_date": null,
          "fez_record_search_key_time_period_start_date": null,
          "fez_record_search_key_total_chapters": null,
          "fez_record_search_key_total_pages": Object {
            "rek_total_pages": "158",
            "rek_total_pages_id": null,
            "rek_total_pages_pid": "UQ:295866",
          },
          "fez_record_search_key_transcript": null,
          "fez_record_search_key_translated_book_title": null,
          "fez_record_search_key_translated_conference_name": null,
          "fez_record_search_key_translated_journal_name": null,
          "fez_record_search_key_translated_newspaper": null,
          "fez_record_search_key_translated_proceedings_title": null,
          "fez_record_search_key_translated_title": null,
          "fez_record_search_key_type_of_data": Array [],
          "fez_record_search_key_volume_number": null,
          "rek_altmetric_id": null,
          "rek_altmetric_score": null,
          "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Teesson, Maree\\" href=\\"/list/author/Teesson%2C+Maree/\\">Teesson, Maree</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Hall, Wayne\\" href=\\"/list/author_id/1968/\\">Hall, Wayne</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Proudfoot, Heather\\" href=\\"/list/author/Proudfoot%2C+Heather/\\">Proudfoot, Heather</a> and <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Degenhardt, Louisa\\" href=\\"/list/author/Degenhardt%2C+Louisa/\\">Degenhardt, Louisa</a> <i><a class=\\"citation_title\\" title=\\"Click to view Book: Addictions\\" href=\\"/view/UQ:295866\\">Addictions</a></i> <span class=\\"citation_edition\\">2nd</span> ed.   <span class=\\"citation_place_of_publication\\">Hove, United Kingdom</span>: <span class=\\"citation_publisher\\">Psychology Press</span>, <span class=\\"citation_date\\">2011</span>.",
          "rek_copyright": "on",
          "rek_created_date": "2013-04-04T15:08:58Z",
          "rek_date": "2011-01-01T00:00:00Z",
          "rek_depositor": null,
          "rek_depositor_affiliation": 1061,
          "rek_description": null,
          "rek_display_type": 174,
          "rek_file_downloads": 0,
          "rek_formatted_abstract": null,
          "rek_formatted_title": null,
          "rek_genre": "Book",
          "rek_genre_type": null,
          "rek_herdc_notes": null,
          "rek_object_type": 3,
          "rek_pid": "UQ:295866",
          "rek_pubmed_doc_type": null,
          "rek_scopus_citation_count": null,
          "rek_scopus_doc_type": null,
          "rek_security_inherited": null,
          "rek_status": 2,
          "rek_subtype": "Edited Book",
          "rek_thomson_citation_count": null,
          "rek_title": "Addictions",
          "rek_updated_date": "2014-10-04T14:05:34Z",
          "rek_wok_doc_type": null,
        }
      }
      suffix=" ed."
    >
      <AuthorsCitationView
        className="citationEditors"
        prefix=""
        publication={
          Object {
            "fez_record_search_key_access_conditions": null,
            "fez_record_search_key_acknowledgements": null,
            "fez_record_search_key_additional_notes": null,
            "fez_record_search_key_advisory_statement": null,
            "fez_record_search_key_alternate_genre": Array [],
            "fez_record_search_key_alternative_title": Array [],
            "fez_record_search_key_ands_collection_type": null,
            "fez_record_search_key_architectural_features": Array [],
            "fez_record_search_key_article_number": null,
            "fez_record_search_key_assigned_group_id": Array [],
            "fez_record_search_key_assigned_user_id": Array [],
            "fez_record_search_key_author": Array [],
            "fez_record_search_key_author_affiliation_country": Array [],
            "fez_record_search_key_author_affiliation_full_address": Array [],
            "fez_record_search_key_author_affiliation_id": Array [],
            "fez_record_search_key_author_affiliation_name": Array [],
            "fez_record_search_key_author_id": Array [],
            "fez_record_search_key_author_role": Array [],
            "fez_record_search_key_book_title": null,
            "fez_record_search_key_building_materials": Array [],
            "fez_record_search_key_category": Array [],
            "fez_record_search_key_chapter_number": null,
            "fez_record_search_key_condition": Array [],
            "fez_record_search_key_conference_dates": null,
            "fez_record_search_key_conference_id": null,
            "fez_record_search_key_conference_location": null,
            "fez_record_search_key_conference_name": null,
            "fez_record_search_key_construction_date": null,
            "fez_record_search_key_contact_details_email": Array [],
            "fez_record_search_key_contributor": Array [
              Object {
                "rek_contributor": "Smith, A",
                "rek_contributor_id": null,
                "rek_contributor_order": 1,
              },
              Object {
                "rek_contributor": "Smith, C",
                "rek_contributor_id": null,
                "rek_contributor_order": 2,
              },
              Object {
                "rek_contributor": "Smith, B",
                "rek_contributor_id": null,
                "rek_contributor_order": 3,
              },
            ],
            "fez_record_search_key_contributor_id": Array [],
            "fez_record_search_key_convener": null,
            "fez_record_search_key_corresponding_country": Array [],
            "fez_record_search_key_corresponding_email": Array [],
            "fez_record_search_key_corresponding_name": Array [],
            "fez_record_search_key_corresponding_organisation": Array [],
            "fez_record_search_key_country_of_issue": null,
            "fez_record_search_key_coverage_period": Array [],
            "fez_record_search_key_creator_id": Array [],
            "fez_record_search_key_creator_name": Array [],
            "fez_record_search_key_data_volume": null,
            "fez_record_search_key_datastream_policy": null,
            "fez_record_search_key_date_available": null,
            "fez_record_search_key_date_photo_taken": null,
            "fez_record_search_key_date_recorded": null,
            "fez_record_search_key_date_scanned": null,
            "fez_record_search_key_doi": null,
            "fez_record_search_key_edition": Object {
              "rek_edition": "2nd",
              "rek_edition_id": null,
              "rek_edition_pid": "UQ:295866",
            },
            "fez_record_search_key_end_date": null,
            "fez_record_search_key_end_page": null,
            "fez_record_search_key_fields_of_research": Array [],
            "fez_record_search_key_file_attachment_access_condition": Array [],
            "fez_record_search_key_file_attachment_embargo_date": Array [],
            "fez_record_search_key_file_attachment_name": Array [],
            "fez_record_search_key_geographic_area": Array [],
            "fez_record_search_key_grant_acronym": Array [],
            "fez_record_search_key_grant_agency": Array [],
            "fez_record_search_key_grant_agency_id": Array [],
            "fez_record_search_key_grant_id": Array [],
            "fez_record_search_key_grant_text": Array [],
            "fez_record_search_key_herdc_code": null,
            "fez_record_search_key_herdc_status": null,
            "fez_record_search_key_identifier": Array [],
            "fez_record_search_key_institutional_status": null,
            "fez_record_search_key_interior_features": Array [],
            "fez_record_search_key_isbn": Array [
              Object {
                "rek_isbn": "9780415583008",
                "rek_isbn_id": null,
                "rek_isbn_order": 1,
                "rek_isbn_pid": "UQ:295866",
              },
              Object {
                "rek_isbn": "9780415582995",
                "rek_isbn_id": null,
                "rek_isbn_order": 2,
                "rek_isbn_pid": "UQ:295866",
              },
              Object {
                "rek_isbn": "0415583004",
                "rek_isbn_id": null,
                "rek_isbn_order": 3,
                "rek_isbn_pid": "UQ:295866",
              },
            ],
            "fez_record_search_key_isdatasetof": Array [],
            "fez_record_search_key_isderivationof": Array [],
            "fez_record_search_key_isi_loc": null,
            "fez_record_search_key_ismemberof": Array [
              Object {
                "rek_ismemberof": "UQ:171723",
                "rek_ismemberof_id": null,
                "rek_ismemberof_order": 1,
                "rek_ismemberof_pid": "UQ:295866",
              },
            ],
            "fez_record_search_key_issn": Array [],
            "fez_record_search_key_issue_number": null,
            "fez_record_search_key_job_number": null,
            "fez_record_search_key_journal_name": null,
            "fez_record_search_key_keywords": Array [],
            "fez_record_search_key_language": Array [],
            "fez_record_search_key_language_of_book_title": Array [],
            "fez_record_search_key_language_of_journal_name": Array [],
            "fez_record_search_key_language_of_proceedings_title": Array [],
            "fez_record_search_key_language_of_title": Array [],
            "fez_record_search_key_length": null,
            "fez_record_search_key_license": null,
            "fez_record_search_key_link": Array [],
            "fez_record_search_key_link_description": Array [],
            "fez_record_search_key_location": Array [],
            "fez_record_search_key_native_script_book_title": null,
            "fez_record_search_key_native_script_conference_name": null,
            "fez_record_search_key_native_script_journal_name": null,
            "fez_record_search_key_native_script_proceedings_title": null,
            "fez_record_search_key_native_script_title": null,
            "fez_record_search_key_newspaper": null,
            "fez_record_search_key_notes": null,
            "fez_record_search_key_oa_embargo_days": null,
            "fez_record_search_key_oa_notes": null,
            "fez_record_search_key_oa_status": null,
            "fez_record_search_key_org_name": null,
            "fez_record_search_key_org_unit_name": null,
            "fez_record_search_key_original_format": null,
            "fez_record_search_key_parent_publication": null,
            "fez_record_search_key_patent_number": null,
            "fez_record_search_key_period": Array [],
            "fez_record_search_key_place_of_publication": Object {
              "rek_place_of_publication": "Hove, United Kingdom",
              "rek_place_of_publication_id": null,
              "rek_place_of_publication_pid": "UQ:295866",
            },
            "fez_record_search_key_proceedings_title": null,
            "fez_record_search_key_project_description": null,
            "fez_record_search_key_project_id": null,
            "fez_record_search_key_project_name": null,
            "fez_record_search_key_project_start_date": null,
            "fez_record_search_key_publisher": Object {
              "rek_publisher": "Psychology Press",
              "rek_publisher_id": null,
              "rek_publisher_pid": "UQ:295866",
            },
            "fez_record_search_key_pubmed_id": null,
            "fez_record_search_key_refereed": null,
            "fez_record_search_key_refereed_source": Object {
              "rek_refereed_source": 453638,
              "rek_refereed_source_id": null,
              "rek_refereed_source_pid": "UQ:295866",
            },
            "fez_record_search_key_related_datasets": null,
            "fez_record_search_key_related_publications": null,
            "fez_record_search_key_report_number": null,
            "fez_record_search_key_retracted": null,
            "fez_record_search_key_rights": null,
            "fez_record_search_key_roman_script_book_title": null,
            "fez_record_search_key_roman_script_conference_name": null,
            "fez_record_search_key_roman_script_journal_name": null,
            "fez_record_search_key_roman_script_proceedings_title": null,
            "fez_record_search_key_roman_script_title": null,
            "fez_record_search_key_scale": null,
            "fez_record_search_key_scopus_id": null,
            "fez_record_search_key_section": null,
            "fez_record_search_key_seo_code": Array [],
            "fez_record_search_key_series": Object {
              "rek_series": "Clinical Psychology: A Modular Course",
              "rek_series_id": null,
              "rek_series_pid": "UQ:295866",
            },
            "fez_record_search_key_software_required": Array [],
            "fez_record_search_key_source": null,
            "fez_record_search_key_start_date": null,
            "fez_record_search_key_start_page": null,
            "fez_record_search_key_structural_systems": Array [],
            "fez_record_search_key_style": Array [],
            "fez_record_search_key_subcategory": Array [],
            "fez_record_search_key_subject": Array [],
            "fez_record_search_key_supervisor": Array [],
            "fez_record_search_key_supervisor_id": Array [],
            "fez_record_search_key_surrounding_features": Array [],
            "fez_record_search_key_time_period_end_date": null,
            "fez_record_search_key_time_period_start_date": null,
            "fez_record_search_key_total_chapters": null,
            "fez_record_search_key_total_pages": Object {
              "rek_total_pages": "158",
              "rek_total_pages_id": null,
              "rek_total_pages_pid": "UQ:295866",
            },
            "fez_record_search_key_transcript": null,
            "fez_record_search_key_translated_book_title": null,
            "fez_record_search_key_translated_conference_name": null,
            "fez_record_search_key_translated_journal_name": null,
            "fez_record_search_key_translated_newspaper": null,
            "fez_record_search_key_translated_proceedings_title": null,
            "fez_record_search_key_translated_title": null,
            "fez_record_search_key_type_of_data": Array [],
            "fez_record_search_key_volume_number": null,
            "rek_altmetric_id": null,
            "rek_altmetric_score": null,
            "rek_citation": "<a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Teesson, Maree\\" href=\\"/list/author/Teesson%2C+Maree/\\">Teesson, Maree</a>, <a class=\\"author_id_link\\" title=\\"Browse by Author ID for Hall, Wayne\\" href=\\"/list/author_id/1968/\\">Hall, Wayne</a>, <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Proudfoot, Heather\\" href=\\"/list/author/Proudfoot%2C+Heather/\\">Proudfoot, Heather</a> and <a class=\\"citation_author_name\\" title=\\"Browse by Author Name for Degenhardt, Louisa\\" href=\\"/list/author/Degenhardt%2C+Louisa/\\">Degenhardt, Louisa</a> <i><a class=\\"citation_title\\" title=\\"Click to view Book: Addictions\\" href=\\"/view/UQ:295866\\">Addictions</a></i> <span class=\\"citation_edition\\">2nd</span> ed.   <span class=\\"citation_place_of_publication\\">Hove, United Kingdom</span>: <span class=\\"citation_publisher\\">Psychology Press</span>, <span class=\\"citation_date\\">2011</span>.",
            "rek_copyright": "on",
            "rek_created_date": "2013-04-04T15:08:58Z",
            "rek_date": "2011-01-01T00:00:00Z",
            "rek_depositor": null,
            "rek_depositor_affiliation": 1061,
            "rek_description": null,
            "rek_display_type": 174,
            "rek_file_downloads": 0,
            "rek_formatted_abstract": null,
            "rek_formatted_title": null,
            "rek_genre": "Book",
            "rek_genre_type": null,
            "rek_herdc_notes": null,
            "rek_object_type": 3,
            "rek_pid": "UQ:295866",
            "rek_pubmed_doc_type": null,
            "rek_scopus_citation_count": null,
            "rek_scopus_doc_type": null,
            "rek_security_inherited": null,
            "rek_status": 2,
            "rek_subtype": "Edited Book",
            "rek_thomson_citation_count": null,
            "rek_title": "Addictions",
            "rek_updated_date": "2014-10-04T14:05:34Z",
            "rek_wok_doc_type": null,
          }
        }
        searchKey={
          Object {
            "key": "fez_record_search_key_contributor",
            "order": "rek_contributor_order",
            "subkey": "rek_contributor",
          }
        }
        suffix=" ed."
      >
        <span
          className="citationEditors"
        >
          <CitationView
            className="citationAuthor"
            prefix=""
            suffix=""
            value="Smith, A"
          >
            <span
              className="citationAuthor"
            >
              Smith, A
            </span>
          </CitationView>
          <CitationView
            className="citationAuthor"
            prefix=", "
            suffix=""
            value="Smith, C"
          >
            <span
              className="citationAuthor"
            >
              , 
              Smith, C
            </span>
          </CitationView>
          <CitationView
            className="citationAuthor"
            prefix=" and "
            suffix=" "
            value="Smith, B"
          >
            <span
              className="citationAuthor"
            >
               and 
              Smith, B
               
            </span>
          </CitationView>
           ed.
        </span>
      </AuthorsCitationView>
    </EditorsCitationView>
    <YearCitationView
      date="2011-01-01T00:00:00Z"
    >
      <span
        className="citationYear"
      >
        (
        2011
        ).
      </span>
    </YearCitationView>
    <CitationView
      className="citationTitle"
      value="Addictions"
    >
      <span
        className="citationTitle"
      >
         
        Addictions
        .
      </span>
    </CitationView>
    <CitationView
      className="citationEdition"
      suffix=" ed."
      value="2nd"
    >
      <span
        className="citationEdition"
      >
         
        2nd
         ed.
      </span>
    </CitationView>
    <CitationView
      className="citationSeries"
      suffix=","
      value="Clinical Psychology: A Modular Course"
    >
      <span
        className="citationSeries"
      >
         
        Clinical Psychology: A Modular Course
        ,
      </span>
    </CitationView>
    <CitationView
      className="citationPlaceOfPublication"
      suffix=":"
      value="Hove, United Kingdom"
    >
      <span
        className="citationPlaceOfPublication"
      >
         
        Hove, United Kingdom
        :
      </span>
    </CitationView>
    <CitationView
      className="citationPublisher"
      value="Psychology Press"
    >
      <span
        className="citationPublisher"
      >
         
        Psychology Press
        .
      </span>
    </CitationView>
    <DoiCitationView
      doi={null}
    >
      <span
        className="citationDOI empty"
      />
    </DoiCitationView>
  </div>
</BookCitation>
`;
